<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.azarnush.ptmalborz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_all_laws"
        android:name="com.azarnush.ptmalborz.All_lawsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_all_laws" />
    <fragment
        android:id="@+id/nav_weblog"
        android:name="com.azarnush.ptmalborz.WebLogFragment"
        android:label="وبلاگ"
        tools:layout="@layout/fragment_web_log" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.azarnush.ptmalborz.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.azarnush.ptmalborz.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.azarnush.ptmalborz.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.azarnush.ptmalborz.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>